Fixed highlights in dark mode

--- a/potions/style.css
+++ b/potions/style.css
@@ -9,8 +9,8 @@
 [data-theme="dark"] {
     --background-color: #191917;
     --text-color: #ffffff;
+    --highlight-color: #57553d;
     --border-color: #5c5c5b;
-
 }
 
 body {
@@ -22,6 +22,10 @@ body {
 
 #themeButton {
     cursor: pointer;
+}
+
+.highlighted {
+    background-color: var(--highlight-color);
 }
 
 .header {
